--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,9 +2,8 @@ name: release
 
 on:
   push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    tags:
+      - 'v*.*.*'    
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -20,14 +19,7 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - name: prepare sources
-        run: |
-          mkdir -p .debpkg/etc/systemd/system
-          mkdir -p .debpkg/usr/local/bin
-          mkdir -p .debpkg/etc/udev/rules.d
-          cp powertop.service .debpkg/etc/systemd/system
-          cp async-start-powertop .debpkg/usr/local/bin
-          cp async-stop-powertop .debpkg/usr/local/bin
-          cp power_supply.rules .debpkg/etc/udev/rules.d
+        run: bash .github/prepare-sources.sh
 
       - uses: jiro4989/build-deb-action@v2
         with:
