--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,8 +32,24 @@ jobs:
       - name: Build Debian package 
         run: dpkg-deb --build ${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version }}
 
-      - uses: actions/upload-artifact@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          name: ${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version }}.deb
-          path: |
-            ./*.deb
+          tag_name: ${{ steps.get_version.outputs.version }}
+          release_name: Release ${{ steps.get_version.outputs.version }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version }}.deb
+          asset_name: ${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version }}.deb
+          asset_content_type: application/vnd.debian.binary-package
