--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,13 +24,13 @@ jobs:
         id: get_version
 
       - name: Prepare sources
-        run: bash .github/prepare-sources.sh ${{ steps.get_version.outputs.version }}
+        run: bash .github/prepare-sources.sh ${{ steps.get_version.outputs.version-without-v }}
 
       - name: List debian build root
-        run: sudo apt-get install -y tree && tree -p ${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version }}
+        run: sudo apt-get install -y tree && tree -p ${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version-without-v }}
 
       - name: Build Debian package 
-        run: dpkg-deb --build ${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version }}
+        run: dpkg-deb --build ${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version-without-v }}
 
       - name: Create Release
         id: create_release
@@ -38,8 +38,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.get_version.outputs.version }}
-          release_name: Release ${{ steps.get_version.outputs.version }}
+          tag_name: ${{ steps.get_version.outputs.version-without-v }}
+          release_name: Release ${{ steps.get_version.outputs.version-without-v }}
           draft: false
           prerelease: false
 
@@ -50,6 +50,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version }}.deb
-          asset_name: ${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version }}.deb
+          asset_path: ./${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version-without-v }}.deb
+          asset_name: ${{ env.PACKAGE_NAME }}-${{ steps.get_version.outputs.version-without-v }}.deb
           asset_content_type: application/vnd.debian.binary-package
